- Adapter `auto` classification now treats CI structure/action references as CI evidence, so valid pinned workflows classify as `cicd` instead of falling back to `iac`.
- Explicit `iac` route now requires IaC structural signals; CI-style workflow content with generic secret terms no longer passes strict IaC routing.
- Container adapter extraction deepened:
- OCI layout counts now include manifest and blob counts.
- Container tarball detection now recognizes Docker-style markers (`manifest.json` + `repositories`) and OCI tar markers (`oci-layout` + `index.json` + `blobs/sha256/*`) for local tar inputs.
- Explicit OCI layout route now fails closed when manifests exist but blob evidence is missing (`CONTAINER_LAYOUT_INVALID`), preventing partial container identity acceptance.
- Explicit OCI layout route now requires manifest digest references to resolve to blob entries, preventing unrelated blob padding from satisfying strict OCI layout evidence.
- Explicit OCI layout route now requires digest references for every manifest entry when manifests are present, preventing partial/digestless OCI manifest shells from passing strict layout routing.
- Explicit container route now fails closed when OCI index manifests shape is invalid and when container tar metadata is partial, preventing mixed valid/corrupt container acceptance.
- Explicit Docker-style tar route now requires at least one `layer.tar` entry when `manifest.json` and `repositories` markers are present, preventing placeholder tar marker shells from passing strict container routing.
- Explicit Docker-style tar route now also requires valid `manifest.json` and `repositories` JSON payload structure, and requires all manifest layer references to resolve to tar entries.
- Explicit Docker-style tar route now requires at least one repository/tag mapping in `repositories` JSON, preventing non-empty but non-usable repository shells from passing strict routing.